--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ main .card-container .cor .selecao-cor:before{
     border-radius: 50%;
     border: 2px solid #000000;
     opacity: 0;
-    transition: all 600ms ease-in-out;
+    transition: all 200ms ease-in-out;
 }
 
 main .card-container .cor .selecao-cor:checked::before{
@@ -149,7 +149,6 @@ main .card-container .bottom-card-container .btn-add{
 }
 
 main .card-container .bottom-card-container .btn-add .add-circle{
-    color:#5ec8cd;
     font-size: 4rem;
 }
 
@@ -161,3 +160,15 @@ main .card-container .bottom-card-container .btn-add .add-circle:hover{
 main .card-container .bottom-card-container .btn-add .cancel{
     color:#ff5656;
 }
+
+.colorAzul{
+    color: #5ec8cd;
+}
+.colorRoxo{
+    color: #7a5ab9;
+}
+
+.colorVermelho{
+    color: #db3842;
+}
+
